fix overflow

--- a/src/app/game/game.component.sass
+++ b/src/app/game/game.component.sass
@@ -36,9 +36,10 @@
   display: flex
   flex: 1
   flex-direction: column
+  overflow: auto
   padding: 8px
 
-.discard-container
+.discard-area
   max-height: 25vh
   min-height: 0
   overflow: auto
